--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "phc-winner-argon2"]
 	path = phc-winner-argon2
-	url = git@github.com:flamewow/phc-winner-argon2.git
+	url = https://github.com/flamewow/phc-winner-argon2.git
